// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <FormattedMessage
      defaultMessage="Viewing {expensesCount} {expensesCount, plural, one {expense} other {expenses} } totalling {expensesTotal}"
      id="summary.text"
      values={
        Object {
          "expensesCount": 1,
          "expensesTotal": "$2.35",
        }
      }
    />
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        <FormattedMessage
          defaultMessage="Add Expense"
          id="summary.add-button"
          values={Object {}}
        />
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <FormattedMessage
      defaultMessage="Viewing {expensesCount} {expensesCount, plural, one {expense} other {expenses} } totalling {expensesTotal}"
      id="summary.text"
      values={
        Object {
          "expensesCount": 2,
          "expensesTotal": "$3.35",
        }
      }
    />
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        <FormattedMessage
          defaultMessage="Add Expense"
          id="summary.add-button"
          values={Object {}}
        />
      </Link>
    </div>
  </div>
</div>
`;
